Prevent items from being scrolled if they have overflow:visible / hidden set

--- a/examples/xml/xml.css
+++ b/examples/xml/xml.css
@@ -31,6 +31,7 @@
     padding: 1px;
     position: relative;
     background: red;
+    overflow: visible;
 }
 
 #text_cursor_inner {
